--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -120,7 +120,7 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="m-menu__item" hidden routerLinkActive="m-menu__item--active">
+                        <li class="m-menu__item" routerLinkActive="m-menu__item--active">
                             <a routerLink="/tutorial" class="m-menu__link" routerLinkActive="m-menu__item--active">
                                 <i class="m-menu__link-icon fa fa-file-video-o"></i>
                                 <span class="m-menu__link-title">
