--- a/src/app/theme/pages/default/tutorial/tutorial.component.html
+++ b/src/app/theme/pages/default/tutorial/tutorial.component.html
@@ -29,10 +29,7 @@
                             </div>
                             <div class="m-portlet__body row" *ngIf="videoselected == 1 && activo">
                                 <div class="col-md-3">
-                                    <video controls width="200">
-                                        <source src="../../../../../assets/app/media/tutorial/1.mp4" />
-                                     </video> 
-                                </div>
+                                    <iframe src="https://player.vimeo.com/video/642885516" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>                                </div>
                                 <div class="col-md-9">
                                     <span>
                                         Ingresa a tu cuenta, en el menú podrás observar lo siguiente:  <br/>
@@ -51,7 +48,9 @@
 
                                         INFORMAR RASTREO - Registra los números de rastreos o trackings de tus pedidos. (Esto es opcional).
 
-                                    </span>
+                                    </span><br/>
+                                    <a  style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642885516">Link del video</a>
+
                                 </div>
                             </div>
                     </div>
@@ -67,9 +66,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 2 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/2.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642888296" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                              </div>
                              <div class="col-md-9">
                                  <span>
@@ -78,7 +75,9 @@
                                     Primero debemos ingresar el valor de la factura, posterior a esto debemos presionar el ícono de CARPETA y elegir el documento a subir, luego debemos presionar el ícono de guardar. Recuerda solo permite formatos PDF. <br/>
                                     
                                     En el caso que no tengas una factura puedes crear una declaración de valor. Te lo enseñamos en otro video tutorial. 
-                                 </span>
+                                 </span><br/>
+                                 <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642888296">Link del video</a>
+
                              </div>
                         </div>
                     </div>
@@ -94,9 +93,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 3 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/3.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642888516" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-9">
                                 <span> En el caso que no tengas una factura, puedes crear una declaración de valor. <br/>
@@ -107,7 +104,9 @@
                                     Si el paquete va a ir a nombre de algún usuario extra, debes cambiarlo también.  <br/>
                                     Recuerda esto debe ser real, si la aduana considera que no es correcta, tienen el derecho a sobre valorar o poner multas.
                                     
-                                </span>
+                                </span> <br/>
+                                <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642888516">Link del video</a>
+
                             </div>
                         </div>
                     </div>
@@ -123,9 +122,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 4 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/4.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642899931" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                              </div>
                              <div class="col-md-9">
                                  <span>
@@ -133,7 +130,9 @@
                                      y documento de soporte individualmente registrados, escoges los paquetes a mano izquierda de cada uno de ellos,
                                       vas al botón CONSOLIDAR. <br/>
                                       Ya con esto podrás embarcar.
-                                 </span>
+                                 </span><br/>
+                                 <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642899931">Link del video</a>
+
                              </div>
                         </div>
                     </div>
@@ -149,11 +148,10 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 5 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/5.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900054" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-3">
+                                <span>
                                 Estos casos solo se usan si hiciste un pedido y te llegaron por partes o con diferentes números de rastreo. <br/>
 
                                 Debes elegir los paquetes a mano izquierda y en la parte de arriba darle clic en FACTURA CONSOLIDADA. <br/>
@@ -163,6 +161,8 @@
 
                                 Automáticamente se districuyen los valores y se consolidan los paquetes. Ta estás listo para embarcar. <br/>
                                 En el caso que no tengas factura puedes hacerlo con el botón DECLARACIÓN CONSOLIDADA y seguir los pasos. Esto solo se recomienda en el caso de emergencia.
+                            </span><br/>
+                            <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900054">Link del video</a>
 
                             </div>
                         </div>
@@ -179,9 +179,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 6 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/6.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900294" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-9">
                                 <span>
@@ -198,7 +196,9 @@
 
                                     Tus paquetes han sido embarcados
 
-                                </span>
+                                </span><br/>
+                                <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900294">Link del video</a>
+
                             </div>
                         </div>
                     </div>
@@ -214,9 +214,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 7 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/7.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900408" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> 
                              </div>
                              <div class="col-md-9">
                                  <span>
@@ -233,7 +231,9 @@
                                     
                                     Dale GUARDAR.
                                     
-                                 </span>
+                                 </span><br/>
+                                 <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900408">Link del video</a>
+
                              </div>
                         </div>
                     </div>
@@ -249,9 +249,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 8 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/8.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900716" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-9">
                                     <span>
@@ -261,7 +259,9 @@
 
                                         También puedes verlo en menú CASILLERO y en la pestaña STATUS GENERAL, puedes filtrar por estados.
 
-                                    </span>
+                                    </span><br/>
+                                    <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900716">Link del video</a>
+
                             </div>
                         </div>
                     </div>
@@ -277,9 +277,7 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 9 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/9.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900835" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                              </div>
                              <div class="col-md-9">
                                  <span>
@@ -287,7 +285,9 @@
                                     Dale al ícono de DETALLE y podrás ver los paquetes que se está cobrando en ese recibo. <br/>
                                     Para ver tus recibos de paquetes no entregados vas al menú CASILLERO en la pestaña RECIBO DE COBROS.
                                     
-                                 </span>
+                                 </span><br/>
+                                 <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900835">Link del video</a>
+
                              </div>
                         </div>
                     </div>
@@ -303,15 +303,14 @@
                         </div>
                         <div class="m-portlet__body row" *ngIf="videoselected == 10 && activo">
                             <div class="col-md-3">
-                            <video controls width="200">
-                                <source src="../../../../../assets/app/media/tutorial/10.mp4" />
-                             </video> 
+                                <iframe src="https://player.vimeo.com/video/642900930" width="200" height="150" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-9">
                                 <span>
                                     Para revisar debes ir a menú CASILLERO, en la pestaña POR ENTREGAR podrás
                                     ver la información de la guía de envío a tu domicilio o en su caso, la autorización de retiro en los puntos de entrega.
-                                </span>
+                                </span><br/>
+                                <a  style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900930">Link del video</a>
                             </div>
                         </div>
                     </div>
