--- a/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
@@ -75,13 +75,13 @@
             <tbody>
             <tr *ngFor="let articulo of envio">
                 <td>
-                    {{(articulo.codigoPedido) ? articulo.codigoPedido : '-' }}
+                    {{(articulo.codigo_pedido) ? articulo.codigo_pedido : '-' }}
                 </td>
                 <td>
                     {{articulo.tracking}}
                 </td>
                 <td>
-                    <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
+                    <span *ngIf="!articulo.media || articulo.media == 0">{{articulo.descripcion}}</span>
                     <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
                     <span *ngIf="articulo.extra">({{articulo.extra.nombre}} {{articulo.extra.apellidos}})</span>
                 </td>
