--- a/src/app/theme/pages/default/tutorial/tutorial.component.html
+++ b/src/app/theme/pages/default/tutorial/tutorial.component.html
@@ -75,19 +75,12 @@
                             </div>
                              <div class="col-md-9">
                                  <span>
-                                    Este paso es muy importante para agilizar la entrega de tus paquetes. <br/>
-                                     Ve a CASILLERO y a la pestaña INSTRUCCIONES DE ENTREGA.<br/>
-
-                                    Elige el o los paquetes que quieras y dale clic al botón ENTREGA. <br/>
-                                    
-                                     Te aparecerá un formulario donde debes elegir o llenar los siguientes datos: <br/>
-                                    
-                                      - A dónde y quién recibe o retira.
-                                    
-                                    Observa bien las opciones que tenemos y verifica los datos. Puedes escoger datos que ya están registrados, como llenarlos si se da el caso. <br/>
-                                    
-                                    Dale GUARDAR.
-                                    
+                                     El el casillero puedes recibir paquetes a nombre de otras personas, tales como familiares 
+                                     o clientes.<br/>
+                                     Vamos al menú PERFIL y dale click en la pestaña de USUARIO EXTRA. Dale en CREAR y llena los datos.
+                                     Estos datos serán necesarios para regstrar paquetes, nacionalizar carga con esa identificación, en el caso
+                                     que se requiera en las direcciones de entrega. Dale ACEPTAR.
+  
                                  </span>
                              </div>
                         </div>
@@ -172,7 +165,16 @@
                                     Para consolidar varios paquetes en un solo trámite, los paquetes deben tener todos su valores
                                      y documento de soporte individualmente registrados, escoges los paquetes a mano izquierda de cada uno de ellos,
                                       vas al botón CONSOLIDAR. <br/>
-                                      Ya con esto podrás embarcar.
+                                      Ya con esto podrás embarcar.<br/>
+                                      Estos casos solo se usan si hiciste un pedido y te llegaron por partes o con diferentes números de rastreo. <br/>
+
+                                      Debes elegir los paquetes a mano izquierda y en la parte de arriba darle clic en FACTURA CONSOLIDADA. <br/>
+      
+                                      Ingresa el valor total de la factura, 
+                                      dale click al ícono de CARPETA y elige el documento y dale GUARDAR. Recuerda que solo permite formato PDF. <br/>
+      
+                                      Automáticamente se districuyen los valores y se consolidan los paquetes. Ta estás listo para embarcar. <br/>
+                                      En el caso que no tengas factura puedes hacerlo con el botón DECLARACIÓN CONSOLIDADA y seguir los pasos. Esto solo se recomienda en el caso de emergencia.
                                  </span>
                              </div>
                         </div>
@@ -194,17 +196,20 @@
                                 <a style="color: #1e1e1e; font-weight: bold;" target="blank" href="https://player.vimeo.com/video/642900054">Link del video</a>
     
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-9">
                                 <span>
-                                Estos casos solo se usan si hiciste un pedido y te llegaron por partes o con diferentes números de rastreo. <br/>
+                                    Solamente es permitido embarcar los paquetes que tienen valores y documentos de soportes registrados. <br/>
 
-                                Debes elegir los paquetes a mano izquierda y en la parte de arriba darle clic en FACTURA CONSOLIDADA. <br/>
+                                    Elige a mano izquierda el paquete y dale clic al botón EMBARCAR, en el caso de paquetes consolidados solo debes elegir uno de ellos y automáticamente embarca el resto. <br/>
 
-                                Ingresa el valor total de la factura, 
-                                dale click al ícono de CARPETA y elige el documento y dale GUARDAR. Recuerda que solo permite formato PDF. <br/>
+                                    Se te abrirá una ventana donde debes revisar los datos para la nacionalización, tales como el remitente y consignatario que es con la información que será nacionalizada, colocar las unidades físicas por paquete.
+                                    Tienes la opción de cambiar las descripciones en el caso que no tenga o esté equivocado en el registro del paquete al ingresar a bodega. <br/>
 
-                                Automáticamente se districuyen los valores y se consolidan los paquetes. Ta estás listo para embarcar. <br/>
-                                En el caso que no tengas factura puedes hacerlo con el botón DECLARACIÓN CONSOLIDADA y seguir los pasos. Esto solo se recomienda en el caso de emergencia.
+                                    Por último eliges que tipo de categoría vas a nacionalizar y en su caso poner alguna nota necesaria al respecto, como una partida arancelaria específica. <br/>
+
+                                    Le das Guardar y confirma que todo esté bien. <br/>
+
+                                    Tus paquetes han sido embarcados
                             </span>
                             </div>
                         </div>
@@ -259,18 +264,18 @@
                             </div>
                             <div class="col-md-9">
                                 <span>
-                                    Solamente es permitido embarcar los paquetes que tienen valores y documentos de soportes registrados. <br/>
+                                    Este paso es muy importante para agilizar la entrega de tus paquetes. <br/>
+                                     Ve a CASILLERO y a la pestaña INSTRUCCIONES DE ENTREGA.<br/>
 
-                                    Elige a mano izquierda el paquete y dale clic al botón EMBARCAR, en el caso de paquetes consolidados solo debes elegir uno de ellos y automáticamente embarca el resto. <br/>
-
-                                    Se te abrirá una ventana donde debes revisar los datos para la nacionalización, tales como el remitente y consignatario que es con la información que será nacionalizada, colocar las unidades físicas por paquete.
-                                    Tienes la opción de cambiar las descripciones en el caso que no tenga o esté equivocado en el registro del paquete al ingresar a bodega. <br/>
-
-                                    Por último eliges que tipo de categoría vas a nacionalizar y en su caso poner alguna nota necesaria al respecto, como una partida arancelaria específica. <br/>
-
-                                    Le das Guardar y confirma que todo esté bien. <br/>
-
-                                    Tus paquetes han sido embarcados
+                                    Elige el o los paquetes que quieras y dale clic al botón ENTREGA. <br/>
+                                    
+                                     Te aparecerá un formulario donde debes elegir o llenar los siguientes datos: <br/>
+                                    
+                                      - A dónde y quién recibe o retira.
+                                    
+                                    Observa bien las opciones que tenemos y verifica los datos. Puedes escoger datos que ya están registrados, como llenarlos si se da el caso. <br/>
+                                    
+                                    Dale GUARDAR.
 
                                 </span>
                             </div>
