--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1513,7 +1513,7 @@
                                 [(ngModel)]="retiro.servicio_id" name="servicio_id" #servicio_id="ngModel"
                                         required
                                         >
-                                        <option [value]="1"> Retiro
+                                        <option [value]="1"> Retiro en USA
                                         </option>
                                         <option [value]="2"> Bajar Peso - Separación
                                         </option>
