--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -36,7 +36,7 @@
             </label>
             <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.consolidado">{{articulo.codigo_consolidado}}</i>
             <a style="cursor: pointer;"  *ngIf="articulo.enviar" title="Instrucciones de Embarque"  (click)="modalEmbarque(embarqueModal,articulo )"> <i class="fa fa-plane" style="font-size: 10px"></i></a>
-           
+            <span *ngIf="articulo.retiro">Revisión</span>
         </td>
         <td>
             {{articulo.fecha_bodega | date: "dd/MM/y" : "-0400"}}
