--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -6,9 +6,9 @@
             <div class="m-stack__item m-brand  m-brand--skin-dark" style="background-color: rgba(38, 38, 38, 1);">
                 <div class="m-stack m-stack--ver m-stack--general">
                     <div class="m-stack__item m-stack__item--middle m-brand__logo">
-                       <!--  <a routerLink="/mi-casillero" class="m-brand__logo-wrapper">
+                       <a routerLink="/mi-casillero" class="m-brand__logo-wrapper">
                             <img alt="" src="./assets/img/logo/logo_dentro.png" height="65" width="auto" />
-                        </a>-->
+                        </a>
                     </div>
                     <div class="m-stack__item m-stack__item--middle m-brand__tools">
                         <!-- END -->
