--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -194,11 +194,11 @@
                         <span class="m-list-settings__item-label">
                             Remitente Embarque
                         </span>
-                        <span class="m-list-settings__item-control " *ngIf="datoEmbarque.usuario_embarque_remitente"
+                        <span class="m-list-settings__item-control " *ngIf="datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente"
                               >
                               {{datoEmbarque.usuario_embarque_remitente.numero_identidad}} - {{datoEmbarque.usuario_embarque_remitente.codigo}} {{ datoEmbarque.usuario_embarque_remitente.full_name }}
                          </span>
-                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && datoEmbarque.extra_embarque_remitente"
+                         <span class="m-list-settings__item-control" *ngIf="datoEmbarque.extra_embarque_remitente"
                          >
                          {{ datoEmbarque.extra_embarque_remitente.identificacion }} - {{ datoEmbarque.extra_embarque_remitente.nombre }} {{datoEmbarque.extra_embarque_remitente.apellidos}})
                         </span>
@@ -207,12 +207,12 @@
                          {{ datoEmbarque.tienda_embarque }}
                        </span>
                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
-                        !datoEmbarque.tienda_embarque && datoEmbarque.usuario_carrier"
+                        !datoEmbarque.tienda_embarque && datoEmbarque.usuario_carrier && !datoEmbarque.extra_carrier"
                               >
                               {{datoEmbarque.usuario_carrier.numero_identidad}} - {{datoEmbarque.usuario_carrier.codigo}} {{ datoEmbarque.usuario_carrier.full_name }}
                          </span>
                          <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
-                         !datoEmbarque.tienda_embarque && !datoEmbarque.usuario_carrier && datoEmbarque.extra_carrier"
+                         !datoEmbarque.tienda_embarque && datoEmbarque.extra_carrier"
                          >
                          {{ datoEmbarque.extra_carrier.identificacion }} - {{ datoEmbarque.extra_carrier.nombre }} {{resourceData.extra_carrier.apellidos }}
                     </span>
@@ -226,22 +226,22 @@
                         <span class="m-list-settings__item-label">
                             Consignatario Embarque
                         </span>
-                        <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuario_embarque_importer"
+                        <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuario_embarque_importer && !datoEmbarque.extra_embarque_importer"
                         >
                         {{ datoEmbarque.usuario_embarque_importer.numero_identidad }} - {{ datoEmbarque.usuario_embarque_importer.codigo }} {{ datoEmbarque.usuario_embarque_importer.full_name}}
                    </span>
-                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_importer && datoEmbarque.extra_embarque_importer"
+                   <span class="m-list-settings__item-control" *ngIf="datoEmbarque.extra_embarque_importer"
                    >
                    {{ datoEmbarque.extra_embarque_importer.identificacion }} - {{ datoEmbarque.extra_embarque_importer.nombre }} {{datoEmbarque.extra_embarque_importer.apellidos}}
                   </span>
                 
                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_importer && !datoEmbarque.extra_embarque_importer &&
-                  datoEmbarque.usuario"
+                  datoEmbarque.usuario && !datoEmbarque.extra"
                         >
                         {{datoEmbarque.usuario.numero_identidad}} - {{datoEmbarque.usuario.codigo}} {{ datoEmbarque.usuario.nombre }} {{datoEmbarque.usuario.apellido}}
                    </span>
                    <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_importer && !datoEmbarque.extra_embarque_importer &&
-                    datoEmbarque.extra && !datoEmbarque.usuario"
+                    datoEmbarque.extra"
                    >
                    {{datoEmbarque.extra.usuario?.numero_identidad}} - {{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/>  ({{ datoEmbarque.extra.identificacion }} - {{ datoEmbarque.extra.nombre }} {{resourceData.extra.apellidos}})
               </span>
