--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -194,27 +194,31 @@
                         <span class="m-list-settings__item-label">
                             Remitente Embarque
                         </span>
-                        <span class="m-list-settings__item-control " *ngIf="datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente"
-                              >
-                              {{datoEmbarque.usuario_embarque_remitente.numero_identidad}} - {{datoEmbarque.usuario_embarque_remitente.codigo}} {{ datoEmbarque.usuario_embarque_remitente.full_name }}
+                        <span class="m-list-settings__item-control m-link m-link--info" *ngIf="datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente"
+                              (click)="verUsuario(datoEmbarque.usuario_embarque_remitente.id, usuarioModal)">
+                              {{datoEmbarque.usuario_embarque_remitente.numero_identidad}} - {{datoEmbarque.usuario_embarque_remitente.codigo}} {{ (!datoEmbarque.usuario_embarque_remitente.empresa || datoEmbarque.usuario_embarque_remitente.empresa == '') ? datoEmbarque.usuario_embarque_remitente.nombre +' '+ datoEmbarque.usuario_embarque_remitente.apellido : datoEmbarque.usuario_embarque_remitente.empresa}}
                          </span>
-                         <span class="m-list-settings__item-control" *ngIf="datoEmbarque.extra_embarque_remitente"
+                         <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuario_embarque_remitente && datoEmbarque.extra_embarque_remitente"
+                         (click)="verUsuario(datoEmbarque.usuario_embarque_remitente.id, usuarioModal)">
+                              {{datoEmbarque.usuario_embarque_remitente.numero_identidad}} - {{datoEmbarque.usuario_embarque_remitente.codigo}} {{ (datoEmbarque.usuario_embarque_remitente.empresa && datoEmbarque.usuario_embarque_remitente.empresa != '') ? datoEmbarque.usuario_embarque_remitente.empresa : datoEmbarque.usuario_embarque_remitente.nombre +' '+ datoEmbarque.usuario_embarque_remitente.apellido}} <br/> ({{ datoEmbarque.extra_embarque_remitente.identificacion }} - {{ datoEmbarque.extra_embarque_remitente.nombre }} {{datoEmbarque.extra_embarque_remitente.apellidos}})
+                        </span>
+                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && datoEmbarque.extra_embarque_remitente"
                          >
-                         {{ datoEmbarque.extra_embarque_remitente.identificacion }} - {{ datoEmbarque.extra_embarque_remitente.nombre }} {{datoEmbarque.extra_embarque_remitente.apellidos}})
+                         {{datoEmbarque.extra_embarque_remitente.usuario?.numero_identidad}} - {{datoEmbarque.extra_embarque_remitente.usuario?.codigo}} {{(!datoEmbarque.extra_embarque_remitente.usuario?.empresa || datoEmbarque.extra_embarque_remitente.usuario?.empresa == '') ? datoEmbarque.extra_embarque_remitente.usuario?.nombre +''+ datoEmbarque.extra_embarque_remitente.usuario?.apellido : datoEmbarque.extra_embarque_remitente.usuario?.empresa}} <br/> ({{ datoEmbarque.extra_embarque_remitente.identificacion }} - {{ datoEmbarque.extra_embarque_remitente.nombre }} {{datoEmbarque.extra_embarque_remitente.apellidos}})
                         </span>
                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente && datoEmbarque.tienda_embarque "
                        >
                          {{ datoEmbarque.tienda_embarque }}
                        </span>
-                        <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
+                        <span class="m-list-settings__item-control m-link m-link--info" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
                         !datoEmbarque.tienda_embarque && datoEmbarque.usuario_carrier && !datoEmbarque.extra_carrier"
-                              >
-                              {{datoEmbarque.usuario_carrier.numero_identidad}} - {{datoEmbarque.usuario_carrier.codigo}} {{ datoEmbarque.usuario_carrier.full_name }}
+                              (click)="verUsuario(datoEmbarque.usuario_carrier.id, usuarioModal)">
+                              {{datoEmbarque.usuario_carrier.numero_identidad}} - {{datoEmbarque.usuario_carrier.codigo}} {{ (!datoEmbarque.usuario_carrier.empresa || datoEmbarque.usuario_carrier.empresa == '') ? datoEmbarque.usuario_carrier.nombre +''+ datoEmbarque.usuario_carrier.apellido : datoEmbarque.usuario_carrier.empresa }}
                          </span>
                          <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
                          !datoEmbarque.tienda_embarque && datoEmbarque.extra_carrier"
                          >
-                         {{ datoEmbarque.extra_carrier.identificacion }} - {{ datoEmbarque.extra_carrier.nombre }} {{resourceData.extra_carrier.apellidos }}
+                         {{datoEmbarque.extra_carrier.usuario?.numero_identidad}} - {{datoEmbarque.extra_carrier.usuario?.codigo}} {{(!datoEmbarque.extra_carrier.usuario?.empresa || datoEmbarque.extra_carrier.usuario?.empresa == '') ? datoEmbarque.extra_carrier.usuario?.nombre +''+ datoEmbarque.extra_carrier.usuario?.apellido : datoEmbarque.extra_carrier.usuario?.empresa}} <br/> ({{ datoEmbarque.extra_carrier.identificacion }} - {{ datoEmbarque.extra_carrier.nombre }} {{resourceData.extra_carrier.apellidos}})
                     </span>
                     <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuario_embarque_remitente && !datoEmbarque.extra_embarque_remitente &&
                     !datoEmbarque.tienda_embarque && !datoEmbarque.extra_carrier && !datoEmbarque.usuario_carrier"
