--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -16,6 +16,7 @@
         <th>Valor(USD)</th>
         <th>Documento</th>
         <th>En Tránsito</th>
+        <th>Estado</th>
         <th>Acciones</th>
     </tr>
     </thead>
@@ -88,7 +89,8 @@
         </td>
       <td ><i *ngIf="articulo.estado_articulo && articulo.estado_articulo.id == 3" class="fa fa-check m-badge m-badge--info m-badge--wide"  style="color: white; background-color: #4f9e35"></i></td>
       <!-- <td *ngIf="articulo.estado_articulo && articulo.estado_articulo.id != 3"><i class="fa fa-check m-badge m-badge--info m-badge--wide"  style="color: white; background-color: #1e1111"></i></td> -->
-      <td> 
+        <td>{{(articulo.estado_articulo && articulo.estado_articulo.id == 3 && articulo.envio && articulo.envio.ultimo_estado && articulo.envio.ultimo_estado.estado ) ? articulo.envio.ultimo_estado.estado : '-'}}</td>
+        <td>
         <div class="row">
             <div class="col-md-1" *ngIf="(articulo.estado_articulo && articulo.estado_articulo.id < 3 && !articulo.editar_embarque)">
             <i class="fa fa-edit m--font-info" title="Editar Embarque" style="cursor: pointer;" (click)="onEmbarcar(embarcar,articulo.id)"></i>
